--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="time_percent">33</string>
-    <string name="study_type">学习类：</string>
+    <string name="study_type">学习类</string>
     <string name="study_hour">%1$dh</string>
     <string name="study_min">%1$dmin</string>
 </resources>
